--- a/index.html
+++ b/index.html
@@ -150,8 +150,17 @@
       </section>
     </main> 
     <footer>
+      <div class="logo">LOGO</div>
+      <div class="prara">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</div>
+      <section class="named">
+      <div>Home</div>
+      <div>About</div>
+      <div>Work</div>
+      <div>Services</div>
+      </section>
+       
 
      </footer>
-
+      
 </body>
 </html>
